# foliant

./: .gitignore  Cargo.toml  README.md
src/: builder.rs  database.rs  database_group.rs  entry.rs  error.rs  lib.rs  lookup_table_store.rs  main.rs  multi_list.rs  payload_store.rs  prefix.rs  search_index.rs  shard.rs  storage.rs  streamer.rs  tag_index.rs  tantivy_index.rs
src/database/: prefix_index.rs  tags.rs
src/frame/: frame.rs  frame_ops.rs  mod.rs
src/multi_list/: bitmap_filter.rs  frame.rs  frame_ops.rs  lazy_filter.rs  lazy_search_filter.rs  lazy_tag_filter.rs  mod.rs  streamer.rs  tag_filter.rs
src/shard_provider/: all_shards_provider.rs  mod.rs
src/tag_list/: mod.rs
tests/: children_count.rs  common.rs  common_prefix.rs  counting_accuracy.rs  debug_a2_children.rs  debug_a2_detailed.rs  debug_bounds.rs  debug_count_bounds.rs  debug_exact_issue.rs  debug_fst_structure.rs  dummy_bitmap_filter.rs  fst_bounds_crash.rs  fst_bounds_crash_focused.rs  fst_bounds_crash_realistic.rs  fst_bounds_crash_shard_filtering.rs  integration_tests.rs  lazy_filter_efficiency.rs  lazy_filter_optimization_test.rs  list_with_filters.rs  list_with_single_filter.rs  mmap_mid_edge.rs  multi_list_no_match_bug.rs  multi_list_seek.rs  multi_shard.rs  multi_shard_tag_filter.rs  multi_shard_tag_filter_resume.rs  payload_store_v2.rs  payload_store_v3.rs  payload_tests.rs  radix_trie_tests.rs  search.rs  search_advanced_api.rs  search_filter_advanced.rs  search_unicode.rs  serialization_list.rs  shell_combined_filters.rs  tag_case_insensitive.rs  tag_comprehensive.rs  tags.rs  test_file_extension_search.rs  (+5 more)
