[package]
name = "foliant"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
tempfile = "3"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
