[package]
name = "foliant"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17"
fst       = "0.4"
regex-automata = { version = "0.1.10", default-features = false, features = ["transducer"] }
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
tempfile = "3"
libc = "0.2"
rustyline = "10"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "foliant"
path = "src/bin/main.rs"
