[package]
name = "foliant"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = false
debug = false
panic = "abort"
overflow-checks = false

[dependencies]
axum = "0.6"
base64 = "0.21"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
smallvec = "1.12"
indicatif = "0.17"
fst       = "0.4"
regex-automata = { version = "0.1.10", default-features = false, features = ["transducer"] }
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
tempfile = "3"
libc = "0.2"
rustyline = "10"
ctrlc = "3"
roaring = "0.10"
crc32fast = "1.3"
rustc-hash = "1.1"
bitvec = "1.0"
lru = "0.10"
zstd = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
unicode-segmentation = "1.11"
unicode-normalization = "0.1"
regex = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "foliant"
path = "src/bin/main.rs"
